--- a/package.json
+++ b/package.json
@@ -12,5 +12,10 @@
     "@tailwindcss/vite": "^4.1.17",
     "astro": "^5.16.1",
     "tailwindcss": "^4.1.17"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.22",
+    "postcss": "^8.5.6",
+    "postcss-load-config": "^6.0.1"
   }
 }
